# glassbox-ai

./: .gitignore  README.md  glassbox-coder-v1.glassbox_hitl_v1_clean.json  predictions_batch2.json  predictions_batch3_rerun.json  predictions_hitl_1.json  predictions_hitl_14365_r2.json  predictions_hitl_2b.json  predictions_hitl_3.json  predictions_hitl_all.json  predictions_hitl_clean.json  predictions_proof.json  predictions_rerun.json  pyproject.toml  render.yaml
.github/workflows/: agent-fix.yml  agent-reusable.yml  ci.yml  deploy-render.yml  export-secrets.yml  keep-alive.yml  make-app-public.yml
deploy/: Dockerfile
docs/: index.html
docs/architecture/: adaptive-complexity-architecture.md  human-in-the-loop.md  readme-v2-backup.md  trust-evaluation-programme.md
docs/dashboard/: index.html
experiments/predictions/: glassbox-coder-v1.glassbox_hitl_14508_r2.json  glassbox-coder-v1.glassbox_hitl_v1.json  predictions_1.json  predictions_batch3.json  predictions_pilot.json
github-app/: Dockerfile  README.md  auth.py  manifest.json  railway.json  requirements.txt  server.py
github-app/app/: __init__.py  auth.py  config.py  github_api.py  handlers.py  main.py  rate_limiter.py  runner.py  webhook.py
github-app/tests/: test_rate_limiter.py  test_rate_limiter_integration.py
memorabilia/business-cards/: 01-green-theme.html  02-green-theme.html  03-glass-theme.html  04-glass-theme.html  05-mixed-theme.html  USWebCoatedSWOP.icc  cards-all-variants.html  cards-final.html  cards-frosted-v2.html  cards-glass-fixed.html  cards-refined.html  cards-v2.html  (+12 more)
runs/: README.md  predictions_batch4.json  predictions_hitl_14508_r2.json  predictions_hitl_2.json  predictions_hitl_p1.json
tests/: test_animal_avatars.py  test_conversation.py  test_e2e.py
(+75 files in other folders)
